syntax = "proto3";
package eicio;

message EventHeader {
	uint64 id = 1;
	uint32 vMajor = 2;
	uint32 vMinor = 3;

	message CollectionHeader {
		enum Type {
			NONE = 0;
			MCParticle = 1;
			SimTrackerHit = 2;
			TrackerData = 3;
			TrackerRawData = 4;
			TrackerHit = 5;
			TrackerPulse = 6;
			TrackerHitPlane = 7;
			TrackerHitZCylinder = 8;
			Track = 9;
			SimCalorimeterHit = 10;
			RawCalorimeterHit = 11;
			CalorimeterHit = 12;
			Cluster = 13;
			RecParticle = 14;
			Vertex = 15;
			Relation = 16;
		}

		Type type = 1;
		string name = 2;
		uint32 payloadSize = 3;
	}
	repeated CollectionHeader collection = 4;

	string description = 16;
}

message Params {
	map<string, int32> ints = 1;
	map<string, float> floats = 2;
	map<string, string> strings = 3;
}

message MCParticle {
	repeated int32 parents = 1;
	repeated int32 children = 2;
	int32 PDG = 3;
	repeated double vertex = 4;
	float time = 5;
	repeated double p = 6;
	double mass = 7;
	float charge = 8;
	repeated double PEndPoint = 9;
	repeated float spin = 10;
	repeated int32 colorFlow = 11;

	int32 genStatus = 12;
	uint32 simStatus = 13;
}

message MCParticleCollection {
	repeated MCParticle particle = 1;
}

message SimTrackerHit {
	int32 cellID0 = 1;
	int32 cellID1 = 2;
	repeated double pos = 3;
	float EDep = 4;
	float time = 5;
	uint32 mc = 6;
	float p = 7;
	float pathLength = 8;
	int32 quality = 9;
}

message SimTrackerHitCollection {
	repeated SimTrackerHit hit = 1;
}

message TrackerRawData {
	int32 cellID0 = 1;
	int32 cellID1 = 2;
	int32 time = 3;
	repeated uint32 ADCs = 4;
}

message TrackerRawDataCollection {
	repeated TrackerRawData data = 1;
}

message TrackerData {
	int32 cellID0 = 1;
	int32 cellID1 = 2;
	float time = 3;
	repeated float charges = 4;
}

message TrackerDataCollection {
	repeated TrackerData data = 1;
}

message TrackerHit {
	int32 cellID0 = 1;
	int32 cellID1 = 2;
	int32 type = 3;
	repeated double pos = 4;
	repeated double cov = 5;
	float EDep = 6;
	float EDepErr = 7;
	float time = 8;
	int32 quality = 9;
	repeated int32 rawHitIDs = 10;
}

message TrackerHitCollection {
	repeated TrackerHit hit = 1;
}

message TrackerPulse {
}

message TrackerPulseCollection {
	repeated TrackerPulse pulse = 1;
}

message TrackerHitPlane {
}

message TrackerHitPlaneCollection {
	repeated TrackerHitPlane plane = 1;
}

message TrackerHitZCylinder {
}

message TrackerHitZCylinderCollection {
	repeated TrackerHitZCylinder cyl = 1;
}

message Track {
}

message TrackCollection {
	repeated Track track = 1;
}

message Contrib {
	int32 MCParticle = 1;
	float energy = 2;
	float time = 3;
	int32 PDG = 4;
	repeated float stepPos = 5;
}

message SimCalorimeterHit {
	Params params = 1;
	int32 cellID0 = 2;
	int32 cellID1 = 3;
	float energy = 4;
	repeated float pos = 5;
	repeated Contrib contributions = 6;
}

message SimCalorimeterHitCollection {
	repeated SimCalorimeterHit hit = 1;
}

message RawCalorimeterHit {
}

message RawCalorimeterHitCollection {
	repeated RawCalorimeterHit hit = 1;
}

message CalorimeterHit {
}

message CalorimeterHitCollection {
	repeated CalorimeterHit hit = 1;
}

message Cluster {
}

message ClusterCollection {
	repeated Cluster cluster = 1;
}

message RecParticle {
}

message RecParticleCollection {
	repeated RecParticle particle = 1;
}
